<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:id="@+id/showDescriptionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_margin="20dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:id="@+id/showDescriptionPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_food"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/showDescriptionName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/showDescriptionCountPortions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_portion"
        android:layout_margin="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/showDescriptionPhoto"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/showDescriptionTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_margin="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/showDescriptionCountPortions"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/showDescriptionDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_margin="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/showDescriptionTime"
        app:layout_constraintStart_toStartOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>