<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".recipe.creation.NewRecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_clear_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@color/cardview_shadow_end_color"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/new_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:includeFontPadding="false"
            android:text="@string/new_recipe"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/close" />


        <TextView
            android:id="@+id/shag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:includeFontPadding="false"
            android:text="@string/shag1"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_recipe" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="150dp">


            <androidx.appcompat.widget.LinearLayoutCompat

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/name"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextDescription"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/description"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/necessarily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/necessarily"
                    android:textSize="12dp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextCountPortions"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/count_portion"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputQtyPortions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextTime"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/time"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_schedule_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@id/necessarily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/necessarily"
                    android:textSize="12dp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/category"
                android:textSize="14dp"
                android:textStyle="bold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/categorymin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/category_min" />

            <TextView
                android:id="@+id/categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextCategory"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/category_add"
                app:endIconDrawable="@drawable/ic_baseline_clear_24"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/outlinedInputCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/montserrat"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/ingredients"
                android:textSize="14dp"
                android:textStyle="bold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ingredientmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/ingredients_min" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingrRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextIngredients"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/ingredients_add"
                app:endIconDrawable="@drawable/ic_baseline_clear_24"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_baseline_add_circle_outline_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/outlinedInputIngredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/cooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/cooking"
                android:textSize="14dp"
                android:textStyle="bold" />

            <com.google.android.material.chip.Chip
                android:id="@+id/cookingmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cooking_min" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stepsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="3"
                tools:listitem="@layout/view_ingredient_edit" />

            <Button
                android:id="@+id/btnAddStep"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="start|center"
                android:text="@string/add_step"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnSurface"
                app:icon="@drawable/ic_add" />

            <Button
                android:id="@+id/btnSaveRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/save_recipe"
                android:textColor="@color/white"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>